yaml/prometheus-federation.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-federated
  namespace: istio-system
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
  - name: http
    port: 9090
    targetPort: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-federation
  namespace: istio-system
spec:
  hosts:
  - "prometheus.istio-system.svc.cluster.local"
  http:
  - match:
    - uri:
        prefix: /federate
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
      weight: 100
